--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@emotion/react": "11.10.5",
+    "@emotion/server": "^11.10.0",
     "@mantine/core": "5.10.3",
     "@mantine/hooks": "5.10.3",
+    "@mantine/next": "^5.10.3",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
